2003-05-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/Makefile.in po/sane-backends.no.po: Added Norwegian
	  translation (from Sigurd Stordal <sigurd.stordal@stud.ibg.uit.no>). 

2003-05-06  Michael Herder <crapsite@gmx.net>

        * doc/descriptions/artec_eplus48u.desc:
          Added comment about different product ID of MEM 48U
        * backend/artec_eplus48u.conf:
          Added new model Memorex MEM 48U

2003-05-05 Oliver Rauch <Oliver.Rauch@XSane.org>
	* backend/umax.c: solved bug that broke compilation for OS2

2003-05-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.fr.po: Updates for the French translation from
	  Yann E. MORIN <yann dot morin dot 1998 at anciens dot enib dot fr>. 
	* tools/check-po.awk: Added script to check the translations for 
	  completeness (from Yann E. MORIN).
	* tools/README: Added description of check-po.awk. Minor reordering.

---- FEATURE FREEZE FOR SANE 1.0.12 ---
-- snapshot 1.0.12-pre1

2003-05-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* frontend/saned.c: Added implementation of poll() for systems
	  that don't provide it (patch from Julien BLACHE
	  <jb@jblache.org>).
	* TODO: Removed obsololete entries.
	* NEWS: Updated for 1.0.12.
	* backend/ibm.c backend/ibm-scsi.c: Only disable object position
	  command for Ricoh IS-420. 

2003-05-04 Oliver Rauch <Oliver.Rauch@XSane.org>

	* backend/umax.c  umax.h
	  applied changes that replace fork() by thread for OS2

2003-05-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/md5.h: Set fixed alignment because otherwise the MacOS X
	  gcc doesn't like it.
	* backend/ibm.c backend/ibm-scsi.c doc/descriptions/ibm.desc:
	  Disabled object_position. That should fix the Ricoh IS-420.
	* frontend/saned.c: Try to get the correct port number when
	  /etc/services doesn't list "sane" by asking for "6566". Check
	  result of socket(). Print ip faimily and port.