@@ -1,3 +1,9 @@
+2003-05-08  Henning Meier-Geinitz <henning@meier-geinitz.de>
+
+	* acinclude.m4 aclocal.m4 configure include/sane/config.h.in:
+	  Added missing HAVE_LIBIEEE1284 macro. The test was there, but
+	  the macro wasn't set.
+
 2003-05-07  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
 	* po/Makefile.in po/sane-backends.no.po: Added Norwegian
